# SNPLIB

./: CMakeLists.txt  LICENSE  README.md  mkl.cmake  setup.m  setup.py  setup_mkl.m  setup_openblas.m
SNPLIB/: __init__.py  genetic_variances.py  snplib.py
SUGIBSANCESTRYFACES/CODE/: DemoAncestryFaces.m
SUGIBSANCESTRYFACES/CODE/AIDFUNCTIONS/OBJECTCLASSES/: superClassLight.m  superHandleClass.m
SUGIBSANCESTRYFACES/CODE/AIDFUNCTIONS/OBJECTCLASSES/@HierarchicalInterface/: HierarchicalInterface.m
SUGIBSANCESTRYFACES/CODE/AIDFUNCTIONS/OBJECTCLASSES/@morphableShape3D/: morphableShape3D.m
SUGIBSANCESTRYFACES/CODE/AIDFUNCTIONS/OBJECTCLASSES/@shape3D/: exportWavefront.m  exportWavefrontv1.m  highResShapev2.m  (+11 more)
SUGIBSANCESTRYFACES/DATA/: 1kg.bim  AVGscan.mat  AncientInfo.mat  ONEKG.mat  PLSR.mat
docs/source/: SNPLIB.rst  conf.py  index.rst
matlab/: CMakeLists.txt
matlab/@SNPLIB/: CalcAdjustedAF_.cc  CalcAdjustedGRM_.cc  CalcAdjustedMAF_.cc  CalcAdmixedGRM_.cc  CalcAlleleFrequencies_.cc  CalcGCTADiagonal_.cc  CalcGRMMatrix_.cc  CalcIBSConnect_.cc  CalcIBSMatrix_.cc  CalcKING_.cc  CalcLogisticGWAS_.cc  CalcMissing_.cc  CalcPCALoadingsApprox.m  CalcPCAiRScores.m  CalcSUGIBSLoadingsApprox.m  CalcSUGIBSiRScores.m  CalcUGRMMatrix_.cc  CalcUniMLMGWAS.m  FindUnrelatedGroup.m  FlipGeno_.cc  IntersectSNP.m  Keep_.cc  PlotSUGIBSNumAxes.m  ProjectPCA.m  ProjectSUGIBS.m  ProjectUPCA.m  SNPLIB.m  UnpackPCA_.cc  UnpackUG_.cc  importPLINKDATA.m  mergePLINKSets.m
matlab/GLMM/: CalcMLMMSigmas_.cc  CalcMultiHeritability.m  CalcMultiLMM_REML.m  CalcPairwiseCorr.m  CalcRMLMMSigmas_.cc  CalcUniHeritability.m  CalcUniMLMGWAS_.cc  CalcUniMLM_.cc  CreateGeneticShapePCA.m
matlab/mexfiles/: CalcAdjustedAF_.cc  CalcAdjustedGRM_.cc  CalcAdjustedMAF_.cc  CalcAdmixedGRM_.cc  CalcAlleleFrequencies_.cc  CalcCCAGWASX_.cc  CalcCCAGWAS_.cc  CalcCCALMM_.cc  CalcCCAReplicationX_.cc  CalcCCAReplication_.cc  CalcGCTADiagonal_.cc  CalcGRMMatrix_.cc  CalcIBSConnection_.cc  CalcIBSMatrix_.cc  CalcKINGMatrix_.cc  CalcLDScores_.cc  CalcLinearRegressionGWAS_.cc  CalcLogisticGWAS_.cc  CalcMissing_.cc  CalcMultiLMM_REML.cc  CalcMultiLMM_REML_.cc  CalcMultiLMM_RML_.cc  CalcUGRMMatrix_.cc  CalcUniLMMGWAS_.cc  CalcUniLMM_.cc  FindUnrelatedGroup_.cc  FlipGeno_.cc  GenerateAdmixedIndividuals_.cc  GenerateIndividuals_.cc  GeneratePairwiseSiblings_.cc  Keep_.cc  UnpackGRMGeno_.cc  UnpackGeno_.cc  UnpackUGeno_.cc  UpdateAf_.cc
matlab/simulation/: GenerateAdmixedIndividuals.cc  GenerateIndividuals.cc  GeneratePairwiseSiblings.cc  UpdateAf.cc
scripts/matlab/: heritability_admixed_families.m  heritability_admixed_population.m  population_revealing.m
scripts/python/: Untitled.ipynb  heritability_admixed_population.ipynb
source/: SNPLIB.rst  conf.py  index.rst  installation.rst  modules.rst
src/: adjusted_grm.cc  adjusted_grm.h  ancestry_estimation.cc  ancestry_estimation.h  base.cc  base.h  basic_statistics.cc  basic_statistics.h  data_manage.cc  data_manage.h  distances_pca.cc  distances_pca.h  genetic_variances.cc  genetic_variances.h  grm.cc  grm.h  gwas.cc  gwas.h  ibs.cc  ibs.h  king.cc  king.h  line_search.h  logistc_regression.h  logistic_regress.h  logistic_regression.h  logistic_utils.cc  logistic_utils.h  math_lib.h  multi_lmm.cc  multi_lmm.h  multi_mlm_reml.cc  multi_mlm_reml.h  multi_mlm_rml.cc  multi_mlm_rml.h  multi_mlm_utils.cc  multi_mlm_utils.h  python_wrapper.cc  relationship_matrix.cc  relationship_matrix.h  (+19 more)
(+14 files in other folders)
