cmake_minimum_required(VERSION 3.5)
project(_SNPLIB CXX)
set(CMAKE_CXX_STANDARD 14)
if(BUILD_PYTHON)
    add_subdirectory(pybind11)
endif()

if(USE_MKL)
    add_definitions(-DUSE_MKL)
    message(STATUS "Using Intel MKL installed in ${INTEL_ROOT}")
    if(${CMAKE_SYSTEM_NAME} MATCHES Windows)
        find_library(MKLCORE NAMES mkl_core.lib PATHS ${INTEL_ROOT}/mkl/lib/intel64)
        find_library(MKLTHREAD NAMES mkl_intel_thread.lib PATHS ${INTEL_ROOT}/mkl/lib/intel64)
        find_library(MKLLP64 NAMES mkl_intel_lp64.lib PATHS ${INTEL_ROOT}/mkl/lib/intel64)
        find_library(IOMP NAMES libiomp5md.lib PATHS ${INTEL_ROOT}/compiler/lib/intel64)
        include_directories(${INTEL_ROOT}/mkl/include)
        set(CMAKE_CXX_FLAGS "/O2yi /EHs")
        set(LINK_LIBRARIES ${MKLCORE} ${MKLTHREAD} ${MKLLP64} ${IOMP})
    endif()
    if(${CMAKE_SYSTEM_NAME} MATCHES Linux)
        find_library(MKLCORE NAMES libmkl_core.a PATHS ${INTEL_ROOT}/mkl/lib/intel64)
        find_library(MKLTHREAD NAMES libmkl_gnu_thread.a PATHS ${INTEL_ROOT}/mkl/lib/intel64)
        find_library(MKLLP64 NAMES libmkl_intel_lp64.a PATHS ${INTEL_ROOT}/mkl/lib/intel64)
        include_directories(${INTEL_ROOT}/mkl/include)
        set(CMAKE_CXX_FLAGS "-march=native -O3 -fPIC -flto -fvisibility=hidden")
        set(LINK_LIBRARIES -Wl,--start-group ${MKLCORE} ${MKLTHREAD} ${MKLLP64} -Wl,--end-group gomp pthread m dl)
    endif()
endif()

if(USE_OPENBLAS)
    add_definitions(-DUSE_OPENBLAS)
    message(STATUS "Using OpenBLAS installed in ${OPENBLAS_ROOT}")
    find_library(OPENBLAS NAMES libopenblas.a PATHS ${OPENBLAS_ROOT}/lib)
    set(CMAKE_CXX_FLAGS "-march=native -O3 -fPIC -flto -fvisibility=hidden")
    set(LINK_LIBRARIES ${OPENBLAS} pthread m dl gfortran quadmath)
    include_directories(${OPENBLAS_ROOT}/include)
endif()

add_library(_SNPLIB MODULE src/python_wrapper.cc src/adjusted_grm.cc src/data_manage.cc src/genetic_variances.cc src/grm.cc src/gwas.cc)
target_link_libraries(_SNPLIB PRIVATE pybind11::module ${LINK_LIBRARIES})
set_target_properties(_SNPLIB PROPERTIES PREFIX "${PYTHON_MODULE_PREFIX}" SUFFIX "${PYTHON_MODULE_EXTENSION}")
