cmake_minimum_required(VERSION 3.5)
project(SNPLIB CXX)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_STATIC_LIBRARY_PREFIX "")
if(USE_MKL)
    add_definitions(-DUSE_MKL)
    include_directories(${MKL_ROOT}/include)
endif()
if(USE_OPENBLAS)
    include_directories(${OPENBLAS_ROOT}/include)
endif()
add_library(snplib STATIC ../src/snp.cc ../src/data_manage.cc ../src/statistics.cc ../src/relationships.cc ../src/genetic_variances.cc ../src/gwas.cc ../src/uni_lmm.cc ../src/multi_lmm.cc ../src/simulations.cc)